--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Manual TSG — Trade &amp; Share Games</title>
+<title>Manual TSG</title>
+<title>Trade &amp; Share Games</title>
 <style>
 :root{
   --bg:#0b1020; --text:#e9eefc; --muted:#aab6e6;
