--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Manual do TSG (Trade & Share Games) para compartilhamento/compra e venda de jogos digitais PS4/PS5.">
   <title>Manual TSG — Trade &amp; Share Games</title>
+
   <style>
     :root{
       --bg:#0b1020; --text:#e9eefc; --muted:#aab6e6;
@@ -20,9 +21,12 @@
                   var(--bg);
       line-height:1.55;
     }
+
     a{color:var(--accent); text-decoration:none}
     a:hover{text-decoration:underline}
+
     .wrap{max-width:1050px; margin:0 auto; padding:28px 18px 60px}
+
     .header{
       background: linear-gradient(180deg, rgba(18,26,51,.92), rgba(18,26,51,.65));
       border:1px solid var(--line);
@@ -30,8 +34,22 @@
       padding:22px 22px 18px;
       box-shadow: 0 10px 30px rgba(0,0,0,.25);
     }
-    .header h1{margin:0; font-size:28px; letter-spacing:.3px}
-    .header .sub{margin-top:6px; color:var(--muted)}
+
+    /* ✅ título em 2 linhas */
+    .title{
+      margin:0;
+      font-size:28px;
+      letter-spacing:.3px;
+      line-height:1.15;
+    }
+    .subtitle{
+      margin:6px 0 0;
+      color:var(--muted);
+      font-size:14px;
+    }
+
+    .header .sub{margin-top:8px; color:var(--muted)}
+
     .toplinks{margin-top:14px; display:flex; flex-wrap:wrap; gap:10px}
     .badge{
       display:inline-flex; align-items:center; gap:8px;
@@ -41,9 +59,10 @@
       color:var(--text);
       font-size:13px;
     }
+
     .grid{display:grid; grid-template-columns: 1fr; gap:16px; margin-top:16px}
 
-    /* TOC base (sem “position: static” pra não matar o sticky) */
+    /* TOC base */
     .toc{
       background: rgba(18,26,51,.55);
       border:1px solid var(--line);
@@ -56,6 +75,7 @@
     .toc a{color:var(--text)}
     .toc .lvl3{margin-left:10px; font-size:13px}
 
+    /* ✅ sticky no desktop (sem ser anulado) */
     @media (min-width: 980px){
       .grid{grid-template-columns: 310px 1fr;}
       .toc{position:sticky; top:16px; max-height: calc(100vh - 32px); overflow:auto;}
@@ -67,21 +87,38 @@
       border-radius:16px;
       padding:18px 18px 22px;
     }
+
     h2,h3,h4,h5{scroll-margin-top: 14px}
     h2{margin:28px 0 10px; font-size:22px}
     h3{margin:18px 0 10px; font-size:18px}
     h4{margin:14px 0 8px; font-size:16px}
+
     p{margin:10px 0}
     hr{border:0; border-top:1px solid var(--line); margin:18px 0}
+
     ol.alpha{list-style: lower-alpha; padding-left: 22px; margin:10px 0}
     ul.bul{padding-left: 22px; margin:10px 0}
-    .note{border-left:4px solid rgba(79,195,255,.7); background: rgba(79,195,255,.08); padding:10px 12px; border-radius:10px; margin:12px 0;}
-    .warn{border-left:4px solid rgba(255,190,70,.85); background: rgba(255,190,70,.10); padding:10px 12px; border-radius:10px; margin:12px 0;}
+
+    .note{
+      border-left:4px solid rgba(79,195,255,.7);
+      background: rgba(79,195,255,.08);
+      padding:10px 12px;
+      border-radius:10px;
+      margin:12px 0;
+    }
+    .warn{
+      border-left:4px solid rgba(255,190,70,.85);
+      background: rgba(255,190,70,.10);
+      padding:10px 12px;
+      border-radius:10px;
+      margin:12px 0;
+    }
+
     .small{font-size:12px; color:var(--muted)}
     .backtop{margin-top:16px}
     .backtop a{font-size:13px}
 
-    /* Tabela responsiva */
+    /* ✅ tabela responsiva no mobile */
     .table-wrap{
       width:100%;
       overflow:auto;
@@ -94,18 +131,21 @@
       border-collapse: collapse;
       min-width: 560px;
     }
-    .table th,.table td{border-bottom:1px solid var(--line); padding:10px 10px; vertical-align: top;}
+    .table th,.table td{
+      border-bottom:1px solid var(--line);
+      padding:10px 10px;
+      vertical-align: top;
+    }
     .table th{text-align:left; background: rgba(11,16,32,.45);}
   </style>
 </head>
 <body>
 <div class="wrap">
   <div class="header" id="topo">
-    <h1>Manual TSG — Trade &amp; Share Games</h1>
-    <div class="sub">Grupo de compartilhamento / compra e venda de jogos digitais PS4 / PS5 • <span class="small">Atualizado em 04/01/2026</span></div>
+    <h1>Manual TSG;Trade &amp Share Games</h1>
+    <div class="sub"><span class="small">Atualizado em 04/01/2026</span></div>
     <div class="toplinks">
-      <span class="badge">🔗 Compartilhe: link + #seção</span>
-      <a class="badge" href="#toc">📌 Ir para o índice</a>
+      <a class="badge" href="#toc">📌 Índice</a>
       <a class="badge" href="#8-alertas-boas-praticas-e-problemas-comuns">⚠️ Alertas</a>
     </div>
   </div>
