--- a/index.html
+++ b/index.html
@@ -1,154 +1,127 @@
+
 <!doctype html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Manual do TSG (Trade & Share Games) para compartilhamento/compra e venda de jogos digitais PS4/PS5.">
-  <title>Manual TSG — Trade &amp; Share Games</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Manual TSG — Trade &amp; Share Games</title>
+<style>
+:root{
+  --bg:#0b1020; --text:#e9eefc; --muted:#aab6e6;
+  --line:rgba(233,238,252,.12); --accent:#4fc3ff;
+}
+*{box-sizing:border-box}
+body{
+  margin:0;
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  color:var(--text);
+  background: radial-gradient(1200px 600px at 20% -10%, rgba(79,195,255,.20), transparent 60%),
+              radial-gradient(900px 500px at 100% 0%, rgba(160,88,255,.18), transparent 55%),
+              var(--bg);
+  line-height:1.55;
+}
+a{color:var(--accent); text-decoration:none}
+a:hover{text-decoration:underline}
+.wrap{max-width:1050px; margin:0 auto; padding:28px 18px 60px}
+.header{
+  background: linear-gradient(180deg, rgba(18,26,51,.92), rgba(18,26,51,.65));
+  border:1px solid var(--line);
+  border-radius:16px;
+  padding:22px 22px 18px;
+  box-shadow: 0 10px 30px rgba(0,0,0,.25);
+}
+.header h1{margin:0; font-size:28px; letter-spacing:.3px}
+.header .sub{margin-top:6px; color:var(--muted)}
+.toplinks{margin-top:14px; display:flex; flex-wrap:wrap; gap:10px}
+.badge{
+  display:inline-flex; align-items:center; gap:8px;
+  padding:8px 10px; border-radius:999px;
+  border:1px solid var(--line);
+  background: rgba(11,16,32,.35);
+  color:var(--text);
+  font-size:13px;
+}
+.grid{display:grid; grid-template-columns: 1fr; gap:16px; margin-top:16px}
+@media (min-width: 980px){
+  .grid{grid-template-columns: 310px 1fr;}
+  .toc{position:sticky; top:16px; max-height: calc(100vh - 32px); overflow:auto;}
+}
 
-  <style>
-    :root{
-      --bg:#0b1020; --text:#e9eefc; --muted:#aab6e6;
-      --line:rgba(233,238,252,.12); --accent:#4fc3ff;
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color:var(--text);
-      background: radial-gradient(1200px 600px at 20% -10%, rgba(79,195,255,.20), transparent 60%),
-                  radial-gradient(900px 500px at 100% 0%, rgba(160,88,255,.18), transparent 55%),
-                  var(--bg);
-      line-height:1.55;
-    }
+.toc{
+  position: static;
+  top: auto;
+  background: rgba(18,26,51,.55);
+  border:1px solid var(--line);
+  border-radius:16px;
+}
+.toc h2{margin:0 0 10px; font-size:16px}
+.toc ul{margin:0; padding-left:16px}
+.toc li{margin:6px 0; color:var(--muted)}
+.toc a{color:var(--text)}
+.toc .lvl3{margin-left:10px; font-size:13px}
+.content{
+  background: rgba(18,26,51,.55);
+  border:1px solid var(--line);
+  border-radius:16px;
+  padding:18px 18px 22px;
+}
+h2,h3,h4,h5{scroll-margin-top: 14px}
+h2{margin:28px 0 10px; font-size:22px}
+h3{margin:18px 0 10px; font-size:18px}
+h4{margin:14px 0 8px; font-size:16px}
+p{margin:10px 0}
+hr{border:0; border-top:1px solid var(--line); margin:18px 0}
+ol.alpha{list-style: lower-alpha; padding-left: 22px; margin:10px 0}
+ul.bul{padding-left: 22px; margin:10px 0}
+.note{border-left:4px solid rgba(79,195,255,.7); background: rgba(79,195,255,.08); padding:10px 12px; border-radius:10px; margin:12px 0;}
+.warn{border-left:4px solid rgba(255,190,70,.85); background: rgba(255,190,70,.10); padding:10px 12px; border-radius:10px; margin:12px 0;}
+.table{width:100%; border-collapse: collapse; margin:12px 0 18px; border:1px solid var(--line); border-radius: 12px; overflow:hidden;}
+.table th,.table td{border-bottom:1px solid var(--line); padding:10px 10px; vertical-align: top;}
+.table th{text-align:left; background: rgba(11,16,32,.45);}
+.small{font-size:12px; color:var(--muted)}
+.backtop{margin-top:16px}
+.backtop a{font-size:13px}
+figure.media {
+  margin: 16px 0 22px;
+}
 
-    a{color:var(--accent); text-decoration:none}
-    a:hover{text-decoration:underline}
+figure.media img {
+  display: block;
+  width: 100%;
+  height: auto;
+  max-width: 920px;   /* limita no desktop */
+  margin: 0 auto;
+  border-radius: 12px;
+}
 
-    .wrap{max-width:1050px; margin:0 auto; padding:28px 18px 60px}
+figure.media figcaption {
+  max-width: 920px;
+  margin: 10px auto 0;
+  font-size: 0.95em;
+  opacity: 0.85;
+  text-align: center;
+}
 
-    .header{
-      background: linear-gradient(180deg, rgba(18,26,51,.92), rgba(18,26,51,.65));
-      border:1px solid var(--line);
-      border-radius:16px;
-      padding:22px 22px 18px;
-      box-shadow: 0 10px 30px rgba(0,0,0,.25);
-    }
+/* Versão menor (para diagramas compactos) */
+figure.media.compact img {
+  max-width: 720px;
+}
 
-    /* ✅ título em 2 linhas */
-    .title{
-      margin:0;
-      font-size:28px;
-      letter-spacing:.3px;
-      line-height:1.15;
-    }
-    .subtitle{
-      margin:6px 0 0;
-      color:var(--muted);
-      font-size:14px;
-    }
-
-    .header .sub{margin-top:8px; color:var(--muted)}
-
-    .toplinks{margin-top:14px; display:flex; flex-wrap:wrap; gap:10px}
-    .badge{
-      display:inline-flex; align-items:center; gap:8px;
-      padding:8px 10px; border-radius:999px;
-      border:1px solid var(--line);
-      background: rgba(11,16,32,.35);
-      color:var(--text);
-      font-size:13px;
-    }
-
-    .grid{display:grid; grid-template-columns: 1fr; gap:16px; margin-top:16px}
-
-    /* TOC base */
-    .toc{
-      background: rgba(18,26,51,.55);
-      border:1px solid var(--line);
-      border-radius:16px;
-      padding:16px;
-    }
-    .toc h2{margin:0 0 10px; font-size:16px}
-    .toc ul{margin:0; padding-left:16px}
-    .toc li{margin:6px 0; color:var(--muted)}
-    .toc a{color:var(--text)}
-    .toc .lvl3{margin-left:10px; font-size:13px}
-
-    /* ✅ sticky no desktop (sem ser anulado) */
-    @media (min-width: 980px){
-      .grid{grid-template-columns: 310px 1fr;}
-      .toc{position:sticky; top:16px; max-height: calc(100vh - 32px); overflow:auto;}
-    }
-
-    .content{
-      background: rgba(18,26,51,.55);
-      border:1px solid var(--line);
-      border-radius:16px;
-      padding:18px 18px 22px;
-    }
-
-    h2,h3,h4,h5{scroll-margin-top: 14px}
-    h2{margin:28px 0 10px; font-size:22px}
-    h3{margin:18px 0 10px; font-size:18px}
-    h4{margin:14px 0 8px; font-size:16px}
-
-    p{margin:10px 0}
-    hr{border:0; border-top:1px solid var(--line); margin:18px 0}
-
-    ol.alpha{list-style: lower-alpha; padding-left: 22px; margin:10px 0}
-    ul.bul{padding-left: 22px; margin:10px 0}
-
-    .note{
-      border-left:4px solid rgba(79,195,255,.7);
-      background: rgba(79,195,255,.08);
-      padding:10px 12px;
-      border-radius:10px;
-      margin:12px 0;
-    }
-    .warn{
-      border-left:4px solid rgba(255,190,70,.85);
-      background: rgba(255,190,70,.10);
-      padding:10px 12px;
-      border-radius:10px;
-      margin:12px 0;
-    }
-
-    .small{font-size:12px; color:var(--muted)}
-    .backtop{margin-top:16px}
-    .backtop a{font-size:13px}
-
-    /* ✅ tabela responsiva no mobile */
-    .table-wrap{
-      width:100%;
-      overflow:auto;
-      border:1px solid var(--line);
-      border-radius:12px;
-      margin:12px 0 18px;
-    }
-    table.table{
-      width:100%;
-      border-collapse: collapse;
-      min-width: 560px;
-    }
-    .table th,.table td{
-      border-bottom:1px solid var(--line);
-      padding:10px 10px;
-      vertical-align: top;
-    }
-    .table th{text-align:left; background: rgba(11,16,32,.45);}
-  </style>
+</style>
 </head>
 <body>
 <div class="wrap">
   <div class="header" id="topo">
-    <h1>Manual TSG;Trade &amp Share Games</h1>
-    <div class="sub"><span class="small">Atualizado em 04/01/2026</span></div>
-    <div class="toplinks">
-      <a class="badge" href="#toc">📌 Índice</a>
-      <a class="badge" href="#8-alertas-boas-praticas-e-problemas-comuns">⚠️ Alertas</a>
-    </div>
+  <div class="titles">
+    <div class="t1">Manual TSG</div>
+    <div class="t2">Trade &amp; Share Games</div>
   </div>
+
+  <div class="toplinks">
+    <a class="badge" href="#toc">📌 Ir para o índice</a>
+    <a class="badge" href="#8-alertas-boas-praticas-e-problemas-comuns">⚠️ Alertas</a>
+  </div>
+</div>
   <div class="grid">
 <div class="toc" id="toc">
 <h2>Índice (links rápidos)</h2>
@@ -194,6 +167,9 @@
 <p>O Grupo Geral funcionará como a comunidade principal para reunir jogadores interessados em compartilhar jogos. Cada jogo será gerenciado em Grupos Específicos, compostos por participantes que compartilham o acesso a um jogo específico. Tanto o Grupo Geral quanto os Grupos Específicos se organizarão pelo aplicativo WhatsApp.</p>
 <h2 id="1-estrutura-do-grupo">1. ESTRUTURA DO GRUPO</h2>
 <h3 id="1-1-grupo-geral-tsg">1.1. Grupo Geral — TSG</h3>
+<figure class="media">
+  <img src="img/globo.png" alt="Estrutura do TSG">
+</figure>
 <ol class="alpha">
 <li>Reúne todos os membros interessados em participar do sistema de compartilhamento.</li>
 <li>É o espaço principal para comunicação, formação de Grupos Específicos e organização geral.</li>
@@ -218,6 +194,9 @@ e) Caráter comunitário e sem fins lucrativos: o TSG não tem objetivo de gerar
 <h2 id="3-regras-gerais-do-grupo">3. REGRAS GERAIS DO GRUPO</h2>
 <h3 id="3-1-regras-de-seguranca-e-confiabilidade">3.1. Regras de Segurança e Confiabilidade</h3>
 <ol class="alpha">
+<figure class="media compact">
+  <img src="img/resp-cascata.png" alt="Responsabilidade em cascata (estrutura de indicações no TSG)">
+</figure>
 <li>Indique apenas pessoas de confiança para fazer parte do TSG, pois você será responsabilizado por elas (responsabilidade em cascata).</li>
 <li>É proibido compartilhar, vender ou organizar jogos obtidos fora de meios legais e confiáveis (ex.: contas de origem duvidosa, golpes ou conteúdo pirata).</li>
 <li>Nunca solicite a desativação/encerramento de conta pelo site da PSN ou por qualquer canal externo. Sempre utilize o console para realizar esse procedimento. Na impossibilidade de usar o console, solicite orientação dos Administradores.</li>
@@ -261,6 +240,9 @@ e) Caráter comunitário e sem fins lucrativos: o TSG não tem objetivo de gerar
 <h3 id="4-2-modelos-de-grupos-especificos">4.2. Modelos de Grupos Específicos</h3>
 <p>Para definir o número de participantes em cada modelo, foi considerado o número máximo de acessos permitido pela PSN, conforme o tipo de jogo (PS4, Cross-Gen ou exclusivo de PS5).</p>
 <h4 id="4-2-1-grupos-com-ate-5-jogadores">4.2.1. Grupos com até 5 jogadores</h4>
+<figure class="media compact" id="img-modelo-5">
+  <img src="img/modelo-5-vagas.png" alt="Modelo 5 vagas — distribuição PS4/PS5 e vaga secundária">
+</figure>
 <p>Aplicável para: jogos de PS4 ou Cross-Gen (PS4 e PS5). Não aplicável para: jogos exclusivos de PS5.</p>
 <p>Número e tipos de vagas</p>
 <p>2 vagas PRIMÁRIAS (PS4)</p>
@@ -276,6 +258,9 @@ e) Caráter comunitário e sem fins lucrativos: o TSG não tem objetivo de gerar
 <h4>Vaga PRIMÁRIA 2 – PS5: 22,5% = R$ 67,50</h4>
 <h4>Vaga SECUNDÁRIA – PS4/PS5: 10% = R$ 30,00</h4>
 <h4 id="4-2-2-grupos-com-ate-3-jogadores">4.2.2. Grupos com até 3 jogadores</h4>
+<figure class="media compact" id="img-modelo-3">
+  <img src="img/modelo-3-vagas.png" alt="Modelo 3 vagas — 2 primárias e 1 secundária">
+</figure>
 <p>Compatível com: todos os jogos, incluindo exclusivos de PS5. Jogos exclusivos de PS5 devem obrigatoriamente utilizar este modelo e, nesse caso, a vaga SECUNDÁRIA, obviamente, deve ser para PS5.</p>
 <p>Número e tipos de vagas</p>
 <p>2 vagas PRIMÁRIAS</p>
