--- a/index.html
+++ b/index.html
@@ -655,8 +655,8 @@
 <li>O ícone de cadeado geralmente indica que a licença do jogo não está válida naquele console naquele momento.</li>
 <li>As causas mais comuns são:</li>
 </ol>
-<p>A conta não está configurada como principal (PS4) ou o “Compartilhamento de Console e Jogo Offline” está desabilitado (PS5);</p>
-<p>Houve alteração recente na conta (troca de senha, desativação feita por engano, troca de usuário).</p>
+<p>1) A conta não está configurada como principal (PS4) ou o “Compartilhamento de Console e Jogo Offline” está desabilitado (PS5);</p>
+<p>2) Houve alteração recente na conta (troca de senha, desativação feita por engano, troca de usuário).</p>
 <ol class="alpha">
 <li>Mas por que isso acontece?</li>
 </ol>
