--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
   <header class="site-header" role="banner">
     <div class="header-wrap">
       <div class="brand">
+        <img class="brand-logo" src="img/logo_tsg_small.png" alt="Logo Trade &amp; Share Games">
         <p class="title">MANUAL TSG</p>
         <p class="subtitle">Trade &amp; Share Games</p>
         <p class="updated">Atualizado em 04/01/2026</p>
