--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
       <nav class="top-nav" aria-label="Acesso rápido">
         <a href="#indice">Índice</a>
-        <a href="#cap8-alertas">Cap. 8 — Alertas</a>
+        <a href="#cap8-alertas">Alertas</a>
       </nav>
     </div>
   </header>
