--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 </div>
 <nav aria-label="Acesso rápido" class="top-nav">
 <a href="#indice">Índice</a>
-<a href="#cap8-alertas">Cap. 8 — Alertas</a>
+<a href="#cap8-alertas">Alertas</a>
 </nav>
 </div>
 </header>
