--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
 
     .brand-logo{
-          height: 24px; /* logo pequeno no celular */
+          height: 64px; /* logo pequeno no celular */
           width: auto;
           max-width: 160px;
           object-fit: contain;
@@ -281,7 +281,7 @@
         }
         @media (min-width: 768px){
           .brand-logo{
-            height: 28px; /* um pouco maior no PC */
+            height: 100px; /* um pouco maior no PC */
             max-width: 200px;
           }
         }
@@ -306,7 +306,6 @@
 </header>
 <main id="conteudo" role="main">
 <section class="toc" id="indice">
-<figure class="hero media"><img alt="Imagem de capa do Manual TSG" decoding="async" loading="lazy" src="img/9ce7ed1cd235.png"/></figure><h2>Índice</h2>
 <p class="toc-hint">Toque/clique em um capítulo para abrir e escolher uma seção. Use o menu fixo no topo para voltar aqui.</p>
 <div class="toc-items">
 <details>
@@ -387,7 +386,10 @@
 <p>Este documento apresenta as diretrizes para o funcionamento de um Grupo Geral <strong>T</strong><strong>rade &amp; </strong><strong>Share</strong><strong> Games</strong> (TSG) de compartilhamento de jogos digitais nas plataformas PS4 e PS5. O objetivo principal é facilitar o acesso aos jogos, reduzir custos e promover uma experiência colaborativa e organizada.</p>
 <p>O Grupo Geral funcionará como a comunidade principal para reunir jogadores interessados em compartilhar jogos. Cada jogo será gerenciado em Grupos Específicos, compostos por participantes que compartilham o acesso a um jogo específico. Tanto o Grupo Geral quanto os Grupos Específicos se organizarão pelo aplicativo WhatsApp.</p>
 <h2 id="cap1-estrutura-do-grupo">1. ESTRUTURA DO GRUPO</h2>
-<h3 id="cap1-1-grupo-geral-tsg">1.1. Grupo Geral — TSG</h3><figure class="media"><img alt="Ilustração do grupo TSG" decoding="async" loading="lazy" src="img/086f2c66e461.jpg"/><figcaption>Imagem ilustrativa (TSG)</figcaption></figure>
+<h3 id="cap1-1-grupo-geral-tsg">1.1. Grupo Geral — TSG</h3>
+<figure class="media">
+  <img src="img/globo.png" alt="Globo" loading="lazy" decoding="async">
+</figure>
 <ol class="alpha">
 <li>Reúne todos os membros interessados em participar do sistema de compartilhamento.</li>
 <li>É o espaço principal para comunicação, formação de Grupos Específicos e organização geral.</li>
@@ -412,7 +414,10 @@
 <h2 id="cap3-regras-gerais-do-grupo">3. REGRAS GERAIS DO GRUPO</h2>
 <h3 id="cap3-1-regras-de-seguranca-e-confiabilidade">3.1. Regras de Segurança e Confiabilidade</h3>
 <ol class="alpha">
-<li>Indique apenas pessoas de confiança para fazer parte do TSG, pois você será responsabilizado por elas (responsabilidade em cascata).</li><figure class="media"><img alt="Ilustração: responsabilidade em cascata" decoding="async" loading="lazy" src="img/8abc0c82c763.jpg"/><figcaption>Exemplo visual — responsabilidade em cascata</figcaption></figure>
+<li>Indique apenas pessoas de confiança para fazer parte do TSG, pois você será responsabilizado por elas (responsabilidade em cascata).</li>
+<figure class="media">
+  <img alt="Ilustração: responsabilidade em cascata" decoding="async" loading="lazy" src="img/resp-cascata.png"/>
+</figure>
 <li>É proibido compartilhar, vender ou organizar jogos obtidos fora de meios legais e confiáveis (ex.: contas de origem duvidosa, golpes ou conteúdo pirata).</li>
 <li>Nunca solicite a desativação/encerramento de conta pelo site da PSN ou por qualquer canal externo. Sempre utilize o console para realizar esse procedimento. Na impossibilidade de usar o console, solicite orientação dos Administradores.</li>
 <li>É proibido compartilhar com pessoas de fora do TSG quaisquer dados de contas PSN, prints, conversas ou materiais (incluindo este manual) sobre o funcionamento e a organização do grupo.</li>
@@ -454,7 +459,10 @@
 </ol>
 <h3 id="cap4-2-modelos-de-grupos-especificos">4.2. Modelos de Grupos Específicos</h3>
 <p>Para definir o número de participantes em cada modelo, foi considerado o número máximo de acessos permitido pela PSN, conforme o tipo de jogo (PS4, Cross-Gen ou exclusivo de PS5).</p>
-<h4 id="cap4-2-1-grupos-com-ate-5-jogadores">4.2.1. Grupos com até 5 jogadores</h4><figure class="media"><img alt="Diagrama do modelo de 5 vagas" decoding="async" loading="lazy" src="img/a66f40b2316d.png"/><figcaption>Modelo 5 vagas</figcaption></figure>
+<h4 id="cap4-2-1-grupos-com-ate-5-jogadores">4.2.1. Grupos com até 5 jogadores</h4>
+<figure class="media">
+  <img alt="Diagrama do modelo de 5 vagas" decoding="async" loading="lazy" src="img/modelo-5-vagas.png"/>
+</figure>
 <p>Aplicável para: jogos de PS4 ou Cross-Gen (PS4 e PS5). Não aplicável para: jogos exclusivos de PS5.</p>
 <p>Número e tipos de vagas</p>
 <p>2 vagas PRIMÁRIAS (PS4)</p>
@@ -469,7 +477,10 @@
 <p>Vaga PRIMÁRIA 1 – PS5: 22,5% = R$ 67,50</p>
 <p>Vaga PRIMÁRIA 2 – PS5: 22,5% = R$ 67,50</p>
 <p>Vaga SECUNDÁRIA – PS4/PS5: 10% = R$ 30,00</p>
-<h4 id="cap4-2-2-grupos-com-ate-3-jogadores">4.2.2. Grupos com até 3 jogadores</h4><figure class="media"><img alt="Diagrama do modelo de 3 vagas" decoding="async" loading="lazy" src="img/abd2e38776bc.png"/><figcaption>Modelo 3 vagas</figcaption></figure>
+<h4 id="cap4-2-2-grupos-com-ate-3-jogadores">4.2.2. Grupos com até 3 jogadores</h4>
+<figure class="media">
+  <img alt="Diagrama do modelo de 3 vagas" decoding="async" loading="lazy" src="img/modelo-3-vagas.png"/>
+</figure>
 <p>Compatível com: todos os jogos, incluindo exclusivos de PS5. Jogos exclusivos de PS5 devem obrigatoriamente utilizar este modelo e, nesse caso, a vaga SECUNDÁRIA, obviamente, deve ser para PS5.</p>
 <p>Número e tipos de vagas</p>
 <p>2 vagas PRIMÁRIAS</p>
@@ -548,10 +559,10 @@
     </ol>
 
     <p class="indent"><strong>Exemplo de anúncio 1:</strong></p>
-    <div class="indent"><div class="table-wrap"><table><tr><th>5 VAGAS (SEM PROMOÇÃO)</th><th>3 VAGAS (SEM PROMOÇÃO)</th></tr><tr><td colspan="2" style="text-align:center;"><img alt="Exemplo de oferta na PS Store (Elden Ring)" class="inline-shot" decoding="async" loading="lazy" src="img/c42d048d37de.png"/></td></tr><tr><td>Jogo: Elden Ring Edicao Padrao<br/>Valor: R$ 299,90</td><td>Jogo: Elden Ring Edicao Padrao<br/>Valor: R$ 299,90</td></tr><tr><td>PRIMÁRIA 1 PS4 - R$ 67,48 (VAGO)<br/>PRIMÁRIA 2 PS4 - R$ 67,48 (VAGO)<br/>PRIMÁRIA 1 PS5 - R$ 67,48 (VAGO)<br/>PRIMÁRIA 2 PS5 - R$ 67,48 (VAGO)<br/>SECUNDÁRIA PS4/PS5 - R$ 29,99 (VAGO)<br/>STATUS: ABERTO</td><td>PRIMÁRIA 1 PS5 - R$ 119,96 (VAGO)<br/>PRIMÁRIA 2 PS5 - R$ 119,96 (VAGO)<br/>SECUNDÁRIA PS5 - R$ 59,98 (VAGO)<br/>STATUS: ABERTO</td></tr></table></div></div>
+    <div class="indent"><div class="table-wrap"><table><tr><th>5 VAGAS (SEM PROMOÇÃO)</th><th>3 VAGAS (SEM PROMOÇÃO)</th></tr><tr><td colspan="2" style="text-align:center;"><img alt="Exemplo de oferta na PS Store (Elden Ring)" class="inline-shot" decoding="async" loading="lazy" src="img/elden-ex1.png"/></td></tr><tr><td>Jogo: Elden Ring Edicao Padrao<br/>Valor: R$ 299,90</td><td>Jogo: Elden Ring Edicao Padrao<br/>Valor: R$ 299,90</td></tr><tr><td>PRIMÁRIA 1 PS4 - R$ 67,48 (VAGO)<br/>PRIMÁRIA 2 PS4 - R$ 67,48 (VAGO)<br/>PRIMÁRIA 1 PS5 - R$ 67,48 (VAGO)<br/>PRIMÁRIA 2 PS5 - R$ 67,48 (VAGO)<br/>SECUNDÁRIA PS4/PS5 - R$ 29,99 (VAGO)<br/>STATUS: ABERTO</td><td>PRIMÁRIA 1 PS5 - R$ 119,96 (VAGO)<br/>PRIMÁRIA 2 PS5 - R$ 119,96 (VAGO)<br/>SECUNDÁRIA PS5 - R$ 59,98 (VAGO)<br/>STATUS: ABERTO</td></tr></table></div></div>
 
     <p class="indent"><strong>Exemplo de anúncio 2:</strong></p>
-    <div class="indent"><div class="table-wrap"><table><tr><th>5 VAGAS (COM PROMOÇÃO)</th><th>3 VAGAS (COM PROMOÇÃO)</th></tr><tr><td colspan="2" style="text-align:center;"><img alt="Exemplo de oferta na PS Store (Lies of P)" class="inline-shot" decoding="async" loading="lazy" src="img/382c097eac17.png"/></td></tr><tr><td>Jogo: Lies of P – Deluxe Edition <br/>R$ 349,99 por R$ 209,94 até 18/01/2025</td><td>Jogo: Lies of P – Deluxe Edition <br/>R$ 349,99 por R$ 209,94 até 18/01/2025</td></tr><tr><td>PRIMÁRIA 1 PS4 - R$ 47,24 (VAGO)<br/>PRIMÁRIA 2 PS4 - R$ 47,24 (VAGO)<br/>PRIMÁRIA 1 PS5 - R$ 47,24 (VAGO)<br/>PRIMÁRIA 2 PS5 - R$ 47,24 (VAGO)<br/>SECUNDÁRIA PS4/PS5 - R$ 20,99 (VAGO)<br/>STATUS: ABERTO</td><td>PRIMÁRIA 1 PS5 - R$ 83,98 (VAGO)<br/>PRIMÁRIA 2 PS5 - R$ 83,98 (VAGO)<br/>SECUNDÁRIA PS5 - R$ 41,99 (VAGO)<br/>STATUS: ABERTO</td></tr></table></div></div>
+    <div class="indent"><div class="table-wrap"><table><tr><th>5 VAGAS (COM PROMOÇÃO)</th><th>3 VAGAS (COM PROMOÇÃO)</th></tr><tr><td colspan="2" style="text-align:center;"><img alt="Exemplo de oferta na PS Store (Lies of P)" class="inline-shot" decoding="async" loading="lazy" src="img/lies-ex2.png"/></td></tr><tr><td>Jogo: Lies of P – Deluxe Edition <br/>R$ 349,99 por R$ 209,94 até 18/01/2025</td><td>Jogo: Lies of P – Deluxe Edition <br/>R$ 349,99 por R$ 209,94 até 18/01/2025</td></tr><tr><td>PRIMÁRIA 1 PS4 - R$ 47,24 (VAGO)<br/>PRIMÁRIA 2 PS4 - R$ 47,24 (VAGO)<br/>PRIMÁRIA 1 PS5 - R$ 47,24 (VAGO)<br/>PRIMÁRIA 2 PS5 - R$ 47,24 (VAGO)<br/>SECUNDÁRIA PS4/PS5 - R$ 20,99 (VAGO)<br/>STATUS: ABERTO</td><td>PRIMÁRIA 1 PS5 - R$ 83,98 (VAGO)<br/>PRIMÁRIA 2 PS5 - R$ 83,98 (VAGO)<br/>SECUNDÁRIA PS5 - R$ 41,99 (VAGO)<br/>STATUS: ABERTO</td></tr></table></div></div>
   </li>
 
   <li><strong>Pagamentos</strong>
