--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 <li>Possibilita jogar na conta pessoal do próprio usuário e, portanto, obter os troféus nessa conta.</li>
 </ol>
 <p><strong>Vaga SECUNDÁRIA</strong></p>
-<ol class="alpha" start="4">
+<ol class="alpha" start="1">
 <li>Não pode ser ativada como principal.</li>
 <li>O conteúdo só pode ser acessado por meio da conta compartilhada.</li>
 <li>Não permite jogar na conta pessoal do usuário; portanto, os troféus do jogo não serão registrados na conta principal do usuário.</li>
@@ -558,11 +558,91 @@
 <li>Vaga SECUNDÁRIA: PS4/PS5 (ou PS5, quando aplicável), com o valor da cota</li>
     </ol>
 
-    <p class="indent"><strong>Exemplo de anúncio 1:</strong></p>
-    <div class="indent"><div class="table-wrap"><table><tr><th>5 VAGAS (SEM PROMOÇÃO)</th><th>3 VAGAS (SEM PROMOÇÃO)</th></tr><tr><td colspan="2" style="text-align:center;"><img alt="Exemplo de oferta na PS Store (Elden Ring)" class="inline-shot" decoding="async" loading="lazy" src="img/elden-ex1.png"/></td></tr><tr><td>Jogo: Elden Ring Edicao Padrao<br/>Valor: R$ 299,90</td><td>Jogo: Elden Ring Edicao Padrao<br/>Valor: R$ 299,90</td></tr><tr><td>PRIMÁRIA 1 PS4 - R$ 67,48 (VAGO)<br/>PRIMÁRIA 2 PS4 - R$ 67,48 (VAGO)<br/>PRIMÁRIA 1 PS5 - R$ 67,48 (VAGO)<br/>PRIMÁRIA 2 PS5 - R$ 67,48 (VAGO)<br/>SECUNDÁRIA PS4/PS5 - R$ 29,99 (VAGO)<br/>STATUS: ABERTO</td><td>PRIMÁRIA 1 PS5 - R$ 119,96 (VAGO)<br/>PRIMÁRIA 2 PS5 - R$ 119,96 (VAGO)<br/>SECUNDÁRIA PS5 - R$ 59,98 (VAGO)<br/>STATUS: ABERTO</td></tr></table></div></div>
+   <p class="indent"><strong>Exemplo de anúncio 1:</strong></p>
+<div class="indent">
+  <div class="table-wrap">
+    <table>
+      <tr>
+        <th>5 VAGAS (SEM PROMOÇÃO)</th>
+        <th>3 VAGAS (SEM PROMOÇÃO)</th>
+      </tr>
 
-    <p class="indent"><strong>Exemplo de anúncio 2:</strong></p>
-    <div class="indent"><div class="table-wrap"><table><tr><th>5 VAGAS (COM PROMOÇÃO)</th><th>3 VAGAS (COM PROMOÇÃO)</th></tr><tr><td colspan="2" style="text-align:center;"><img alt="Exemplo de oferta na PS Store (Lies of P)" class="inline-shot" decoding="async" loading="lazy" src="img/lies-ex2.png"/></td></tr><tr><td>Jogo: Lies of P – Deluxe Edition <br/>R$ 349,99 por R$ 209,94 até 18/01/2025</td><td>Jogo: Lies of P – Deluxe Edition <br/>R$ 349,99 por R$ 209,94 até 18/01/2025</td></tr><tr><td>PRIMÁRIA 1 PS4 - R$ 47,24 (VAGO)<br/>PRIMÁRIA 2 PS4 - R$ 47,24 (VAGO)<br/>PRIMÁRIA 1 PS5 - R$ 47,24 (VAGO)<br/>PRIMÁRIA 2 PS5 - R$ 47,24 (VAGO)<br/>SECUNDÁRIA PS4/PS5 - R$ 20,99 (VAGO)<br/>STATUS: ABERTO</td><td>PRIMÁRIA 1 PS5 - R$ 83,98 (VAGO)<br/>PRIMÁRIA 2 PS5 - R$ 83,98 (VAGO)<br/>SECUNDÁRIA PS5 - R$ 41,99 (VAGO)<br/>STATUS: ABERTO</td></tr></table></div></div>
+      <tr>
+        <td style="text-align:center;">
+          <img alt="Exemplo de oferta na PS Store (Elden Ring)" class="inline-shot" decoding="async" loading="lazy" src="img/elden-ex1.png"/>
+        </td>
+        <td style="text-align:center;">
+          <img alt="Exemplo de oferta na PS Store (Elden Ring)" class="inline-shot" decoding="async" loading="lazy" src="img/elden-ex1.png"/>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <strong>Jogo:</strong> Elden Ring Edição Padrão<br/>
+          <strong>Valor:</strong> R$ 299,90<br/><br/>
+          PRIMÁRIA 1 PS4 - R$ 67,48 (VAGO)<br/>
+          PRIMÁRIA 2 PS4 - R$ 67,48 (VAGO)<br/>
+          PRIMÁRIA 1 PS5 - R$ 67,48 (VAGO)<br/>
+          PRIMÁRIA 2 PS5 - R$ 67,48 (VAGO)<br/>
+          SECUNDÁRIA PS4/PS5 - R$ 29,99 (VAGO)<br/>
+          <strong>STATUS:</strong> ABERTO
+        </td>
+
+        <td>
+          <strong>Jogo:</strong> Elden Ring Edição Padrão<br/>
+          <strong>Valor:</strong> R$ 299,90<br/><br/>
+          PRIMÁRIA 1 PS5 - R$ 119,96 (VAGO)<br/>
+          PRIMÁRIA 2 PS5 - R$ 119,96 (VAGO)<br/>
+          SECUNDÁRIA PS5 - R$ 59,98 (VAGO)<br/>
+          <strong>STATUS:</strong> ABERTO
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
+
+<p class="indent"><strong>Exemplo de anúncio 2:</strong></p>
+<div class="indent">
+  <div class="table-wrap">
+    <table>
+      <tr>
+        <th>5 VAGAS (COM PROMOÇÃO)</th>
+        <th>3 VAGAS (COM PROMOÇÃO)</th>
+      </tr>
+
+      <tr>
+        <td style="text-align:center;">
+          <img alt="Exemplo de oferta na PS Store (Lies of P)" class="inline-shot" decoding="async" loading="lazy" src="img/lies-ex2.png"/>
+        </td>
+        <td style="text-align:center;">
+          <img alt="Exemplo de oferta na PS Store (Lies of P)" class="inline-shot" decoding="async" loading="lazy" src="img/lies-ex2.png"/>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <strong>Jogo:</strong> Lies of P – Deluxe Edition<br/>
+          <strong>Promoção:</strong> R$ 349,99 por R$ 209,94 até 18/01/2025<br/><br/>
+          PRIMÁRIA 1 PS4 - R$ 47,24 (VAGO)<br/>
+          PRIMÁRIA 2 PS4 - R$ 47,24 (VAGO)<br/>
+          PRIMÁRIA 1 PS5 - R$ 47,24 (VAGO)<br/>
+          PRIMÁRIA 2 PS5 - R$ 47,24 (VAGO)<br/>
+          SECUNDÁRIA PS4/PS5 - R$ 20,99 (VAGO)<br/>
+          <strong>STATUS:</strong> ABERTO
+        </td>
+
+        <td>
+          <strong>Jogo:</strong> Lies of P – Deluxe Edition<br/>
+          <strong>Promoção:</strong> R$ 349,99 por R$ 209,94 até 18/01/2025<br/><br/>
+          PRIMÁRIA 1 PS5 - R$ 83,98 (VAGO)<br/>
+          PRIMÁRIA 2 PS5 - R$ 83,98 (VAGO)<br/>
+          SECUNDÁRIA PS5 - R$ 41,99 (VAGO)<br/>
+          <strong>STATUS:</strong> ABERTO
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
   </li>
 
   <li><strong>Pagamentos</strong>
