--- a/index.html
+++ b/index.html
@@ -689,8 +689,8 @@
 <li>No console, crie um novo usuário (não é necessário criar um e-mail previamente).</li>
 <li>Para o e-mail de login da conta PSN, use o padrão do Gmail com “+”:</li>
 </ol>
-<p>Formato:</p>
-<p>Exemplo:  + “Lies of P” → <br/></p>
+<p>Formato: seu.usuario+nomedojogo-tsg@gmail.com</p>
+<p>Exemplo: usuario.principal+liesofp-tsg@gmail.com</p>
 <ol class="alpha" start="4">
 <li>Vantagens: você recebe notificações no seu e-mail principal, reduz risco de inatividade, facilita recuperação de conta e evita criar/gerenciar vários e-mails.</li>
 <li>Após criar a conta PSN, faça login nela, compre o jogo e inicie o download.</li>
